src/css/style.css
@import url(https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700);

body {
    --website-background-color: #111;
    --text-color: whitesmoke;
    --box-color-rgb: 34, 34, 34;
    --box-color: rgb(var(--box-color-rgb));

    --border-radius: 1rem;

    background-color: var(--website-background-color);
    color: var(--text-color);
    font-family: Poppins, sans-serif;
    line-height: 1.2;
    padding: 1rem;

    @media (min-width: 50rem) {
        height: 100vh;
        padding: 2rem;
    }
}

button {
    color: inherit;
    background-color: var(--box-color);
    cursor: pointer;
    border-radius: var(--border-radius);
}

button:hover:not(:disabled) {
    background-color: #444;
    outline: 1px solid #888;
}

button:disabled {
    color: rgb(119, 119, 119);
    cursor: unset;
}

.chess {
    display: flex;
    flex-direction: column;
    gap: 1.5rem;

    @media (min-width: 50rem) {
        height: 100%;
        flex-direction: row;
        justify-content: center;
    }
}

.board_panel {
    flex: 0 1 min(calc(100vh - 7.5rem), 50vw);
    display: flex;
    flex-direction: column;
    gap: 1rem;

    @media (min-width: 50rem) {
        order: 2;
    }
}

.board {
    width: 100%;
    aspect-ratio: 1;
    border-radius: var(--border-radius);
}

.moves_panel {
    display: flex;
    flex-direction: column;
    gap: 0.5rem;

    @media (min-width: 50rem) {
        height: 100%;
        width: 25rem;
        order: 3;
        gap: 1rem;
    }
}

.control_panel {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    gap: 1.5rem;

    @media (min-width: 50rem) {
        width: 18rem;
        order: 1;
    }
}

.improvements {
    overflow-y: auto;
    line-height: 1.5;
}

.improvements h1 {
    font-size: 1.5rem;
    font-weight: 600;
    margin-bottom: 1rem;
}

.improvements ul {
    font-style: italic;
}

.improvements ul:not(:last-child) {
    margin-bottom: 1rem;
}

.improvements li {
    list-style-position: inside;
    list-style-type: disc;
}

.playmode {
    display: flex;
    flex-direction: column;
    justify-content: end;
    gap: 0.5rem;

    padding-top: calc(1.5rem - 2px);
    box-shadow: 0 -2px 0 var(--box-color);

    @media (min-width: 50rem) {
        gap: 1rem;
        padding: 0;
        box-shadow: none;
    }
}

.playmode_selector {
    display: grid;
    grid-template-columns: 1fr auto 1fr;
    padding: 0.8rem 0.3rem;
    border-radius: var(--border-radius);
    font-size: 1.2rem;
    font-weight: 600;
}

.playmode_player_vs_bot {
    display: flex;
    flex-direction: column;
    border-radius: var(--border-radius);
    transition: 0.3s padding ease, 0.3s background-color ease;

    @media (min-width: 50rem) {
        padding: 0 1rem;
        background-color: var(--box-color);
    }
}

.playmode_player_vs_bot:hover {
    @media (min-width: 50rem) {
        padding: 1rem;
        background-color: rgba(var(--box-color-rgb), 0.3);
    }
}

.playmode_player_vs_bot_color {
    display: flex;
    gap: 0.5rem;
    transition: 0.3s margin ease;

    @media (min-width: 50rem) {
        gap: 1rem;
    }
}

.playmode_player_vs_bot:hover .playmode_player_vs_bot_color {
    margin-top: 0.5rem;

    @media (min-width: 50rem) {
        margin-top: 1rem;
    }
}

.playing_color_selector {
    display: flex;
    flex: 1;
    justify-content: center;
    gap: 0.5rem;
    align-items: center;
    padding: 0 0.75rem;
    transition: 0.3s padding ease;
    overflow: hidden;
}

.playmode_player_vs_bot:hover .playing_color_selector {
    padding: 0.5rem 0.75rem;
}

.playing_color_selector_icon {
    width: 1.8rem;
    height: 0;
    transition: 0.3s height ease;
}

.playmode_player_vs_bot:hover .playing_color_selector_icon {
    height: 1.8rem;
}

.playing_color_selector span {
    height: 0;
    transition: 0.3s height ease;
}

.playmode_player_vs_bot:hover .playing_color_selector span {
    height: 1em;
}

.playmode_arrow {
    visibility: hidden;
}

.header {
    display: flex;
    justify-content: space-between;
}

.next_player {
    display: flex;
    align-items: center;
}

.next_player,
.evaluation {
    background-color: var(--box-color);
    border-radius: 0.75rem;
    padding: 0.5rem 1rem;
}

.white_to_move,
.black_to_move,
.end_of_game {
    display: flex;
    gap: 0.5rem;
    align-items: center;
}

.end_of_game {
    gap: 0;
}

.evaluation {
    display: flex;
    align-items: center;
}

.square {
    width: 1.5rem;
    height: 1.5rem;
    border-radius: 0.5rem;
}
.white_to_move .square {
    background-color: whitesmoke;
}
.black_to_move .square {
    background-color: black;
}

.moves_container {
    position: relative;
    overflow-y: hidden;
    flex-grow: 1;
    background-color: var(--box-color);
    border-radius: var(--border-radius);
    padding: 0.5rem;
}

.copy_moves {
    display: flex;
    position: absolute;
    padding: 0.5rem;
    bottom: 0.2rem;
    left: 0.2rem;
    cursor: pointer;
}

.copy_moves_image {
    height: 1.2rem;
    width: 1.2rem;
}

.moves {
    max-height: calc(40vh - 1rem);
    padding: 1rem;
    gap: 0.25rem;
    overflow-y: auto;

    display: grid;
    grid-template-columns: 1fr 3fr 3fr;
    grid-auto-rows: 1.8rem;

    align-items: center;
    justify-items: center;
    align-content: start;

    @media (min-width: 50rem) {
        max-height: none;
        height: 100%;
        padding: 2rem;
    }
}

.moves::-webkit-scrollbar,
.improvements::-webkit-scrollbar {
    width: 0.8rem;
}

.moves::-webkit-scrollbar-thumb,
.improvements::-webkit-scrollbar-thumb {
    background: var(--text-color);
    border-radius: 1rem;
}

.move {
    cursor: pointer;
    border-radius: 0.5rem;
    padding: 0.4rem 15%;
    border: thin solid transparent;
    min-width: 2rem;
    text-align: center;
}

.move:hover {
    background-color: var(--website-background-color);
    border-color: #888;
}

.currentMove {
    font-weight: 700;
    background-color: var(--website-background-color);
    border-color: var(--text-color);
}

.actions {
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    gap: 0.5rem;
    font-size: 3rem;

    @media (min-width: 50rem) {
        gap: 1rem;
    }
}

.actions button {
    display: flex;
    justify-content: center;
    align-items: center;
    user-select: none;
    padding: 0.4rem 0;
    border-radius: var(--border-radius);
    font-size: 2.5rem;
}

.reset_icon {
    height: 0.8em;
    width: 0.8em;
}

